--- a/navbarstylearts.css
+++ b/navbarstylearts.css
@@ -156,13 +156,13 @@ p {
 }
 
 a {
-  text-decoration: none;
+  text-decoration:none ;
   display: inline-block;
   outline: none;
 }
 
 a:hover {
-  text-decoration: underline 3px solid #000000;
+  text-decoration: underline 3px solid #87150f;
   color: #000000;
 }
 
@@ -255,12 +255,12 @@ textarea {
 .default_link {
   font-size: 14px;
   font-family: "Poppins", sans-serif;
-  color: #ffffff;
+  color: #87150f;
   font-weight: 600;
 }
 
 .default_link a:hover {
-  color: #ffffff;
+  color: #87150f;
 }
 
 .default_link a {
@@ -1017,7 +1017,7 @@ footer
 }
  .quick-links-footer a:hover {
   text-underline-offset: 5px;
-  text-decoration: underline #ffffff 2px;
+  text-decoration: underline #87150f 2px;
 }
 
 
@@ -3766,7 +3766,7 @@ a:hover {
 
 .service .about-info .link a,
 a:hover {
-  color: #ffffff;
+  color: #87150f;
 }
 /*service section */
 
@@ -3807,7 +3807,7 @@ a:hover {
 .payLinks:hover,
 .payLinks:focus,
 .viewLinks:hover {
-  text-decoration: underline 3px  #ffffff;
+  text-decoration: underline 3px  #87150f;
   text-underline-offset: 4px;
 }
 /*** 
@@ -7923,6 +7923,13 @@ a:focus {
   color: #ffffff;
 }
 
+.featured-service .image-box .caption-box .title a:hover {
+  text-decoration: underline 3px solid #87150f;
+}
+
+.featured-service .image-box .caption-box .title a:focus {
+  outline: rgb(0, 0, 255) solid 3px;
+}
 .featured-service .image-box .icon {
   position: absolute;
   left: 0px;
